templates/pure/style.css
/* ... */
#content.preview_preview_content div.serendipity_entryFooter {
    display: none;
    visibility: hidden;
}



/** General rules **/

.serendipity_edit_nugget {
    font-size: 12px;
    font-size: .75rem;
    text-align: right;
    margin-top: .25rem;
    margin-bottom: .25rem;
}
.serendipityImageButton {
    cursor: pointer;
}
.serendipity_center {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1em;
    text-align: center;
    font-size: .8125rem;
}
.serendipity_search_results .searchterm {}
.serendipity_search_results .searchresults {}


/** Messaging **/

.staticpage_results,
.serendipity_search,
.serendipity_content_message, .content_msg
.serendipity_msg_success, .msg_success,
.serendipity_msg_notice, .msg_notice,
.serendipity_msg_important, .msg_important,
.msg_question,
.serendipity_commentDirection {
  display: block;
  width: 100%;
  font-size: 13px;
  font-size: 0.8125rem;
  margin-bottom: 1em;
  padding: .5em .25em;
  border: 1px solid #aaa;
  border-radius: .25em;
  box-shadow: 1px 2px 3px #ccc; }
  .serendipity_msg_important p, .serendipity_msg_success p, .serendipity_msg_notice p, .msg_important p, .msg_success p, .msg_notice p, .msg_question p, .serendipity_commentDirection p {
    margin: 0; }
  .search_msg,
  .serendipity_search {
    background-color: lightgray; }
  .content_msg, .serendipity_content_message,
  .serendipity_commentDirection {
    background-color: #f0f8ff; }
  .msg_important, .serendipity_msg_important {
    background: #f2dede; /* light red */
    border-color: #eed3d7;
    color: #b94a2b; }
  .msg_success. .serendipity_msg_success {
    background: #dff0d8; /* light green */
    border-color: #d6e9c6;
    color: #468847; }
  .msg_notice, .serendipity_msg_notice {
    background: #d9edf7; /* light blue */
    border-color: #bce8f1;
    color: #3a87ad; }
  .msg_notice.serendipity_subscription_on,
  .msg_notice.serendipity_subscription_pending,
  .msg_notice.serendipity_subscription_off {
    margin-top: .5em; }
  .msg_notice.serendipity_subscription_off {
    display: none;
    visibility: hidden; }
  .msg_question {
    background: #fcf8e3; /* light yellow */
    border-color: #fbeed5;
    color: #c09853; }


/** Entries **/
#content p {
    word-break: break-word;
}
.post_content {
    display: inline-block;
    line-height: 1.6;
    width: 100%; }
    .post_content blockquote {
        border-left: 5px solid #ccc;
        padding-left: 1em; }
.serendipity_title {
    font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
    font-size: .938rem;
    font-weight: bold;
    margin-top: 1em;
    color: #333;
    border-bottom: 2px ridge #DDD;
}
.serendipity_title a:link,
.serendipity_title a:visited {
    text-decoration: none;
    border: 0 none;
    color: #222;
}
.serendipity_title a:hover {
    color: #ff4136;
}
.post {
    width: 100%;
    margin-top: .5em;
}
.post_info,
.serendipity_entryFooter {
    background-color: #fafafa;
    border: 1px solid #eee;
    border-radius: 4px;
    box-shadow: 1px 1px 2px rgba(111, 111, 111, 0.5);
    margin: 1rem auto;
    padding-left: .25em;
    padding-right: .25em;
    font-size: .938rem;
}
.post_info.listed_view .plainList li {
    display: inline-block;
}
.post_info.listed_view .plainList li:not(:first-of-type)::before {
    content: " | ";
    padding-right: .25em;
}
.post table,
.post_content table {/* yes, since within #extended id knot */
    display: inline-grid;
    max-width: 100%;
    width: auto;
    overflow: auto;
    border-collapse: separate;
    border: 1px solid #eee;
    padding: .5em; }
.serendipity_entry_author_self {}
.serendipity_entry_read_more {
    text-align: right;
    margin-top: 1.5em;
}
.serendipity_entry_date,
.serendipity_Entry_Date {
    margin: auto;
}
.serendipity_date {
    font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
    font-variant: all-petite-caps;
    font-size: 18px;
    font-size: 1.125rem;
    color: #333;
    margin: 0;
    text-align: right;
}
.post_more {
    font-size: 14px;
    font-size: .875rem;
    text-align: right;
    display: inherit;/*=block*/
    padding-right: 1em;
}
.serendipity_image_block + .post_more {
    margin-top: 1em;
}
img.serendipity_entryIcon {
    float: right;
    border: 0 none;
}


/** Event Plugins **/

li.post_category {
    margin-bottom: .5em;
}
.post_category span {
    font-weight: bold;
}

.serendipity_multilingualInfo {
    margin-bottom: 1em;
    font-weight: bold;
}
.serendipity_multilingualInfo a {
    font-weight: normal;
}

ul.staticpage_result li {
    list-style: disclosure-open;
    font-style: oblique;
    margin: 0;
}

#content > .serendipity_staticpage {
    margin: 0 1em;
}
/* analogue to post/serendipity_entry [ff] */
.serendipity_staticpage {
    line-height: 1.6;
}
.serendipity_staticpage header h2 {
    margin: .5em 0 1em 0;
    letter-spacing: 1px;
    text-transform: uppercase;
}
.staticpage_metainfo {
    width: 100%;
    display: inline-block;
}
.serendipity_staticpage .page_info {
    font-size: .875rem;
}
.page_content blockquote {
    border-left: 5px solid #ccc;
    padding-left: 1em; }

.serendipity_freeTag {
    margin-bottom: 1em;
    font-weight: bold;
    width: 100%;
}
.serendipity_freeTag a {
    font-weight: initial;
}
.serendipity_freeTag_related {
    font-weight: bold;
}
.serendipity_freeTag_related ul li {
    margin-bottom: .5em;
}
.serendipity_Entry_Date.freetag_cloud {
    background-color: transparent;
    border: 1px solid #4D618A;
    padding: .5em;
    border-radius: .5rem;
    box-shadow: 1px 2px 3px #555;
}
.freetag_cloud .serendipity_freetag_taglist {
    background-color: #f4f8fc;
}
.serendipity_freetag_taglist {
    padding: 0 .25em !important;
    border-radius: .25em;
}

.newsbox {
    margin-top: 1em;
    border-color: azure; /* fieldset use a kind of ridge border default style so we need to make it thinner by color */
}
/* ... */

